# ppg-blood-pressure-prediction

./: README.md  make_prediction.py  pyproject.toml
Calculation/: BP_prediction_functions.py  feature_calculation.py  key_point_calculation.py
Datasets/: ppg_dataset3_2min.csv  ppg_dataset4_2min.csv  ppg_dataset5_2min.csv  ppg_dataset6_2min.csv
Datasets/ML Datasets/: dataset_bp1.pkl  dataset_bp2.pkl  dataset_bp3.pkl  dataset_part1.pkl  dataset_part2.pkl  dataset_part3.pkl
ML models/: Linear_Regression.py  keras_nn_regression.py  mlp_scikit.py  random_forest.py
