[tool.poetry]
name = "o2ring-bp"
version = "0.1.0"
description = ""
authors = ["iteratec"]

[tool.poetry.dependencies]
python = "^3.7"
heartpy = "^1.2.7"
bleak = "0.9.1"
numpy = "1.19.3"
scipy = "1.4.1"
matplotlib = "3.3.3"
pandas = "1.1.5"
intersect = "^1.2"
torch = "1.8.1"
tensorflow = "2.4.1"
keras = "2.4.3"
scikit-learn = "0.24.1"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
